--- a/proyecto1-juanMaravilloso/styles/styles.css
+++ b/proyecto1-juanMaravilloso/styles/styles.css
@@ -234,3 +234,19 @@ header .button {
     list-style: none;
     padding-left: 0;
 }
+
+/******************************************************************************
+ * Footer
+ *****************************************************************************/
+footer {
+    background-color: #000000;
+}
+
+footer p {
+    margin: 0;
+    font-family: 'Bebas Neue', cursive;
+    font-weight: normal;
+    color: #a2a2a2;
+    padding: 2em;
+    text-align: center;
+}
