--- a/juanmaravilloso/styles/main.css
+++ b/juanmaravilloso/styles/main.css
@@ -2,6 +2,8 @@
 body {
     margin: 0;
     font-family: "Roboto", "sans-serif-";
+    font-weight: 300;
+    line-height: 1.43;
     font-size: 14px;
     text-align: center;
     color: black;
@@ -10,6 +12,8 @@ body {
 
 h1, h2, h3, h4, h5, h6 {
     font-family: "Bebas Neue", "cursive";
+    font-weight: normal;
+    letter-spacing: 3px;
 }
 
 h1 {
@@ -58,10 +62,38 @@ header,
 .skill,
 footer {
     background: black;
-    color: white;
+    color: #a2a2a2;
 }
 
 section {
     padding-top: 60px;
     padding-bottom: 70px;
+}
+
+/* Header */
+header {
+    
+display: flex;
+    
+justify-content: space-between;
+    
+align-items: center;
+}
+
+header h2 {
+    padding: 20px;
+    letter-spacing: 1.5px;
+}
+
+header #icon-open {
+}
+
+header #icon-close {
+
+display: none;
+}
+
+header nav {
+    
+display: none;
 }
