--- a/juanmaravilloso/styles/main.css
+++ b/juanmaravilloso/styles/main.css
@@ -32,6 +32,7 @@ h4 {
     font-size: 14px;
 }
 
+/* TODO Fix button margin-top */
 .button {
     border-radius: 3px;
     border: solid 2px #1c6698;
@@ -72,12 +73,9 @@ section {
 
 /* Header */
 header {
-    
-display: flex;
-    
-justify-content: space-between;
-    
-align-items: center;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
 header h2 {
@@ -89,11 +87,23 @@ header #icon-open {
 }
 
 header #icon-close {
-
-display: none;
+    display: none;
 }
 
 header nav {
-    
-display: none;
+    display: none;
+}
+
+/* Summary */
+#summary {
+
+}
+
+#summary p {
+    font-size: 18px;
+}
+
+#summary h1 {
+    margin-top: 24px;
+    margin-bottom: 34px;
 }
