--- a/juanmaravilloso/styles/main.css
+++ b/juanmaravilloso/styles/main.css
@@ -181,3 +181,11 @@ header.nav-open ul li {
     padding: 0;
     list-style: none;
 }
+
+/* Footer */
+footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 104px;
+}
