--- a/juanmaravilloso/styles/main.css
+++ b/juanmaravilloso/styles/main.css
@@ -135,7 +135,7 @@ header.nav-open ul {
 header.nav-open ul li {
     color: #1c6698;
     margin: 40px;
-    text-transform: uppercase;ç
+    text-transform: uppercase;
 }
 
 /* Summary */
@@ -150,6 +150,23 @@ header.nav-open ul li {
 #summary h1 {
     margin-top: 24px;
     margin-bottom: 34px;
+}
+
+/* About me */
+.videoWrapper { /* URL hitten repo */
+    position: relative;
+    padding-bottom: 56.25%; /* 16:9 */
+    padding-top: 25px;
+    height: 0;
+}
+
+.videoWrapper iframe {
+    border: none;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
 }
 
 /* Skills */
