--- a/JuanMaravillosoProject/juanmaravilloso/styles/main.css
+++ b/JuanMaravillosoProject/juanmaravilloso/styles/main.css
@@ -105,6 +105,15 @@ header nav {
     display: none;
 }
 
+header ul li a {
+    text-decoration: none;
+    color: #1c6698;
+}
+
+header ul li a:visited {
+    color: #1c6698;
+}
+
 /* Menu */
 header.nav-open #icon-open {
     display: none;
@@ -266,6 +275,12 @@ footer {
         display: inline-block;
         margin: 0 20px;
     }
+
+    header ul li a {
+        
+    }
+
+    /* Summary */
     #summary p {
         font-size: 20px;
     }
@@ -276,6 +291,7 @@ footer {
         margin: 30px auto 60px auto;
     }
 
+    /* Skills */
     #skills .list .skill {
         margin-right: 128px;
     }
