--- a/Task-Manager/src/css/styles.css
+++ b/Task-Manager/src/css/styles.css
@@ -3,8 +3,13 @@ html {
     box-sizing: border-box;
 }
 
+*, *::before, *::after {
+    box-sizing: inherit;
+}
+
 body {
     font-family: Roboto, sans-serif;
+    font-size: 16px;
     background: lightgrey;
     margin: 0;
     padding: 5px;
@@ -19,9 +24,44 @@ h1 {
 }
 
 /* Main */
+.task-container {
+    margin: 0 auto;
+}
+
 #task-input {
     font-family: Roboto, sans-serif;
     font-size: 16px;
     border: none;
-    padding: 15px 12px;
+    outline: none;
+    padding: 12px;
+    width: 100%;
+}
+
+main {
+    background: white;
+}
+
+.task-list {
+    min-height: 300px;
+    list-style: none;
+    margin: 0;
+    padding: 15px 10px;
+    border-top: 1px solid darkgray;
+    border-bottom: 1px solid lightgray;
+}
+
+.task-list li {
+    display: flex;
+    justify-content: space-between;
+    margin: 10px 0;
+}
+
+.task-management {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-gap: 10px;
+}
+
+.task-management p {
+    font-size: 10px;
 }
