--- a/Task-Manager/src/css/styles.css
+++ b/Task-Manager/src/css/styles.css
@@ -43,6 +43,57 @@ h1 {
     box-shadow: none;
 }
 
+.modal-background {
+    position: absolute;
+    background: rgba(0, 0, 0, 0.3);
+    width: 100%;
+    height: 100%;
+    top: 0;
+    right: 0;
+}
+
+#confirm-dialog {
+    position: fixed;
+    border: none;
+    border-radius: 3px;
+    box-shadow: 0 2px 4px -1px rgba(0, 0, 0, .2),
+                0 4px 5px 0 rgba(0, 0, 0, .14),
+                0 1px 10px 0 rgba(0, 0, 0, .12);
+    margin-top: 50px;
+    max-width: 350px;
+    min-height: 300px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+#confirm-dialog p.question {
+    font-size: 1.5em;
+    font-weight: bold;
+    color: darkslategrey;
+    margin: 0;
+    padding: 0;
+}
+
+#confirm-dialog .question + p {
+    text-align: center;
+}
+
+.confirm-buttons {
+    display: inline-block;
+    margin: 0 auto;
+}
+
+.confirm-buttons button {
+    font-size: 14px;
+    padding: 10px 25px;
+    margin-right: 10px;
+}
+
+.confirm-buttons button:last-child {
+    margin-right: 0;
+}
+
 /* Main */
 .task-container {
     margin: 0 auto;
