--- a/Task-Manager/src/css/styles.css
+++ b/Task-Manager/src/css/styles.css
@@ -43,55 +43,50 @@ h1 {
     box-shadow: none;
 }
 
-.modal-background {
-    position: absolute;
-    background: rgba(0, 0, 0, 0.3);
+.button.large {
+    font-size: 14px;
+    padding: 10px 25px;
+}
+
+.modal-container {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
     width: 100%;
     height: 100%;
-    top: 0;
-    right: 0;
+    background: rgba(0, 0, 0, 0.3);
+}
+.modal-container.open {
+    display: block;
 }
 
-#confirm-dialog {
-    position: fixed;
-    border: none;
-    border-radius: 3px;
-    box-shadow: 0 2px 4px -1px rgba(0, 0, 0, .2),
-                0 4px 5px 0 rgba(0, 0, 0, .14),
-                0 1px 10px 0 rgba(0, 0, 0, .12);
-    margin-top: 50px;
+.modal-container .modal {
+    display: grid;
+    grid-template-rows: auto 1fr auto;
+    grid-gap: 10px;
+    justify-items: center;
+    padding: 10px 20px;
+    background: white;
     max-width: 350px;
     min-height: 300px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-}
-
-#confirm-dialog p.question {
-    font-size: 1.5em;
-    font-weight: bold;
-    color: darkslategrey;
-    margin: 0;
-    padding: 0;
-}
-
-#confirm-dialog .question + p {
-    text-align: center;
-}
-
-.confirm-buttons {
-    display: inline-block;
     margin: 0 auto;
 }
 
-.confirm-buttons button {
-    font-size: 14px;
-    padding: 10px 25px;
-    margin-right: 10px;
+.modal-container .modal * {
+    margin: 0;
 }
 
-.confirm-buttons button:last-child {
-    margin-right: 0;
+.modal-container .modal div {
+    display: grid;
+    grid-template-columns: auto auto;
+    grid-gap: 10px;
+}
+
+@media screen and (min-width: 350px) {
+    .modal-container .modal {
+        margin-top: 3vw;
+    }
 }
 
 /* Main */
