Add line-through to task when checked

--- a/Task-Manager/src/css/styles.css
+++ b/Task-Manager/src/css/styles.css
@@ -129,6 +129,10 @@ main {
     margin: 10px 0;
 }
 
+.task-list #task-checkbox:checked + label {
+    text-decoration: line-through;
+}
+
 .task-list i {
     cursor: pointer;
 }
