Fix some errors

--- a/react/my-first-react-app/src/index.css
+++ b/react/my-first-react-app/src/index.css
@@ -1,2 +1,2 @@
 /* Nueva forma de añadir fuentes (puedes meterlo en el index) */
-@import 'https://fonts.googleapis.com/icon?family=Material+Icons'
+@import 'https://fonts.googleapis.com/css?family=Roboto+Slab:400,700|Roboto:300,400,700&display=swap'
