Add tasks with checked condition

--- a/task-manager-angular/task-manager-angular/src/app/app.component.html
+++ b/task-manager-angular/task-manager-angular/src/app/app.component.html
@@ -2,7 +2,7 @@
   <h1>Administrador de tareas</h1>
 </header>
 
-<app-task-manager></app-task-manager>
+<app-tasks-list></app-tasks-list>
 
 <footer>
   <p>Autor: Gilberto López Ambrosino</p>
